tests/type-error/AmbiguousConstructor.vix
type bool where
  False True : bool

type Bool2 where
  False True : Bool2

type Bool3 where
  False True : Bool3

type Sausage where
  saus saus2 : Sausage

the : (a : type) -> a -> a
the _ x = x

false x = case x of
  True -> 1
  False -> 0
